--- a/style.css
+++ b/style.css
@@ -190,85 +190,9 @@ body {
     font-size: 65px
 }
 
-.form{
-    width: 250px;
-    height: 380px;
-    background: linear-gradient(to top, rgba(0,0,0,0.8)50%,rgba(0,0,0,0.8)50%);
-    position: absolute;
-    top: -20px;
-    left: 870px;
-    transform: translate(0%,-5%);
-    border-radius: 10px;
-    padding: 25px;
-}
-
-.form h2{
-    width: 220px;
-    font-family: sans-serif;
-    text-align: center;
-    color: #ff7200;
-    font-size: 22px;
-    background-color: #fff;
-    border-radius: 10px;
-    margin: 2px;
-    padding: 8px;
-}
-
-.form input{
-    width: 240px;
-    height: 35px;
-    background: transparent;
-    border-bottom: 1px solid #ff7200;
-    border-top: none;
-    border-right: none;
-    border-left: none;
-    color: #fff;
-    font-size: 15px;
-    letter-spacing: 1px;
-    margin-top: 30px;
-    font-family: sans-serif;
-}
-
-.form input:focus{
-    outline: none;
-}
-
-::placeholder{
-    color: black;
-    font-family: 'Montserrat', sans-serif;
-}
-
-.form .link{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 17px;
-    padding-top: 20px;
-    text-align: center;
-}
-.form .link a{
-    text-decoration: none;
-    color: #ff7200;
-}
-
-.direction{
-    text-align: center;
-}
-.direction button{
-    font-family: cursive;
-    font-weight: bold;
-    background-color: #ffffff44;
-    border:none;
-    width:50px;
-    height:50px;
-    border-radius: 50%;
-    transition: 0.5s;
-    margin:0 10px;
-}
-.direction button:hover{
-    background-color: #ffffff;
-}
 .item{
     border-radius: 15px;
-    width:300px;
+    width:390px;
     height:500px;
     background-image: linear-gradient(to top, #AEC0CE, #ECECF2);
     overflow: hidden;
@@ -323,7 +247,6 @@ body {
 }
 #list{
     display: flex;
-    width:max-content;
 }
 #formList{
     width:1280px;
@@ -336,75 +259,6 @@ body {
 #formList::-webkit-scrollbar{
     display: none;
 }
-@media screen and (max-width: 1024px){
-    .item{
-        width: calc(33.3vw - 20px);
-    }
-    .direction{
-        display: none;
-    }
-}
-@media screen and (max-width: 768px){
-    .item{
-        width: calc(50vw - 20px);
-    }
-    .direction{
-        display: none;
-    }
-}
-  
-  
-
-/* On smaller screens, decrease text size */
-@media screen and (max-width:1200px) {
-    /*Normal Screen*/
-
-    .navbar{
-        width: 100%;
-        height: 100px;
-    }
-    ul{
-        margin-left: 30px;
-    }   
-    ul li{
-        margin-left: 60px;
-    }
-    ul li a{
-       font-size: 1.6vw; 
-    }
-    .search{
-        margin-top: 3px;
-        margin-left: 290px;
-    }
-    .srch{
-        height: 40px;
-        width: 190px;
-        font-size: 14px;
-    }
-    .btn{
-        height:40px;
-        width: 80px;
-    }
-    .content{
-        width: 100%;
-    }
-    .content h1, .content span{
-        font-size: 4.5vw; 
-    }
-    .content .par{
-        width: 90%;
-        font-size: 1.5vw;
-    }
-    .content .cn{
-        width: 13%;
-        height: 3.5vw;
-        font-size: 1.8vw;
-    }
-    .content a{
-        font-size: 1.6vw
-    }
-}
-
 /*Blog*/
 
 .judul{
@@ -518,56 +372,6 @@ body {
     padding: 0;
     text-decoration: none;
     color: white;
-}
-/*untuk responsif blog*/
-    @media (max-width: 768px) {
-    .judul h2 {
-        text-align: center;
-        margin-left: 0;
-    }
-
-    .judul h3 {
-        margin-left: 0;
-    }
-
-    .top-section {
-        flex-direction: column-reverse;
-        gap: 20px;
-    }
-
-    .right-section {
-        margin-right: 0;
-        gap: 20px;
-    }
-
-    .blog-content {
-        margin: 20px;
-    }
-
-    .blog-image {
-        width: 100%;
-        height: auto;
-    }
-
-    .blog-description {
-        margin-left: 0;
-    }
-
-    .caption {
-        width: 100%;
-        font-size: 18px;
-        text-align: center;
-        bottom: 0;
-        padding: 10px 0;
-    }
-
-    .blog-caption {
-        font-size: 20px;
-    }
-
-    .blog-author {
-        font-size: 16px;
-    }
 }
 
 /*Article*/
@@ -761,6 +565,23 @@ iframe {
   float: left;
   
 }
+@keyframes shine {
+    0% {
+      text-shadow: 0 0 10px rgba(229, 86, 14, 0.8);
+    }
+    50% {
+      text-shadow: 0 0 20px rgb(233, 67, 11);
+    }
+    100% {
+      text-shadow: 0 0 10px rgba(231, 141, 6, 0.892);
+    }
+  }
+
+  #textbersinar {
+    color: orangered;
+    animation: shine 2s infinite; /* Menggunakan animasi shine selama 2 detik secara terus-menerus */
+  }
+
 
 
 @media only screen and (max-width: 768px) {
@@ -985,13 +806,35 @@ iframe {
 .content h4{
     color:white;
 }
+@keyframes shine {
+    0% {
+      text-shadow: 0 0 10px rgba(241, 234, 230, 0.8);
+    }
+    50% {
+      text-shadow: 0 0 20px rgb(239, 210, 200);
+    }
+    100% {
+      text-shadow: 0 0 10px rgba(222, 207, 185, 0.892);
+    }
+  }
+
+  #gantiwarna {
+    color: rgba(255, 0, 0, 0.87);
+    animation: shine 2s infinite; /* Menggunakan animasi shine selama 2 detik secara terus-menerus */
+  }
+
+   
+
 
 /*login/register*/
 .log{
     background-image: url("img/bgimage.png");
-    background-size: cover;
-    background-repeat: no-repeat;   
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+    min-height: 100vh;
 }
+
 
 .login{
     width: 320px;
@@ -999,13 +842,15 @@ iframe {
     top: 50%;
     left: 50%;
     padding: 50px 30px;
-    position: absolute;
     background: #fff;
     color: #000;
+    position: absolute;
     transform: translate(-50%, -50%);
     box-sizing: border-box;
     border: 1px solid #000;
     border-radius: 10px;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
 
 .login .avatar {
@@ -1232,78 +1077,189 @@ iframe {
   }
 
  /*responsif untuk navigasi*/
- /* Media Queries for Tablet */
-@media (max-width: 768px) {
+ @media only screen and (min-width: 600px) and (max-width: 1024px) {
     .navbar li {
-        margin-right: 20px;
+        margin-right: 20px; /* untuk tablet */
     }
-    .sign-in-button {
-        margin-right: 10px;
-    }
-    /* Modify <a> tag styles for tablets */
+
     .navbar a {
-        font-size: 14px;
+        font-size: 13px; 
+    }
+
+    .sign-in-button {
+        margin-right: 15px; 
+    }
+    .logo img {
+        max-width: 90px; 
+    }
+    .main-home .content {
+        width: 80%; 
+    }
+
+    .main-home .content h1 {
+        font-size: 40px; 
+        margin-top: 7%; 
+    }
+
+    .main-home .content .home-btn {
+        width: 120px; 
+        height: 30px; 
+        font-size: 16px; 
+        margin-bottom: 8px; 
+        margin-left: 15px; 
+    }
+    .logo img {
+        max-width: 90px;
+    }
+}
+@media only screen and (min-width: 768px)  {
+    .main-home .content {
+        width: 70%;
+    }
+
+    .main-home .content h1 {
+        font-size: 45px; 
+        margin-top: 8%; 
+    }
+
+    .main-home .content .home-btn {
+        width: 140px; 
+        height: 35px; 
+        font-size: 17px; 
+        margin-bottom: 10px; 
+        margin-left: 18px; 
+    }
+    .logo img {
+        max-width: 90px;
+        
     }
 }
 
-/* Media Queries for Mobile Phones */
-@media (max-width: 480px) {
+
+
+/* Media query for laptop/desktop screens */
+@media only screen and (min-width: 1025px) {
+    .navbar li {
+        margin-right: 50px; 
+    }
+
+    .navbar a {
+        font-size: 15px; 
+    }
+
+    .sign-in-button {
+        margin-right: 30px; 
+    }
+    .logo img {
+        max-width: 90px; 
+    }
+}
+
+/* Media query for mobile screens */
+@media only screen and (max-width: 599px) {
     .navbar {
-        display: none;
+        flex-direction: column; 
     }
-    .navbar-phone {
-        display: block;
+
+    .navbar li {
+        margin: 0;
+        margin-bottom: 10px; 
     }
-    /* Modify <a> tag styles for mobile phones */
-    .navbar-phone a {
-        font-size: 12px;
+
+    .navbar a {
+        font-size: 14px; 
+    }
+
+    .sign-in-button {
+        margin: 0;
+        margin-bottom: 15px; 
+    }
+    .logo img {
+        max-width: 90px; 
+    }
+    .main-home .content {
+        width: 90%; 
+    }
+
+    .main-home .content h1 {
+        font-size: 30px; 
+        margin-top: 5%; 
+    }
+
+    .main-home .content .home-btn {
+        width: 100%; 
+        height: 40px; 
+        font-size: 14px; 
+        margin-bottom: 8px; 
+        margin-left: 0; 
+    }
+}
+/*responsif untuk form*/
+@media only screen and (max-width: 599px) {
+    .item {
+        width: 90%;
+        max-width: none;
+    }
+}
+
+/* Media query for medium screens */
+@media only screen and (min-width: 600px) and (max-width: 1024px) {
+    .item {
+        width: 45%;
+    }
+}
+
+/* Media query for large screens */
+@media only screen and (min-width: 1025px) {
+    .item {
+        width: 30%;
     }
 }
 
 /*responsif untuk footer*/
     @media (max-width: 768px) {
         .footer-column {
-            margin: 0 20px; /* Adjust margins for smaller screens */
+            margin: 0 20px;
         }
     
         .galaxy-footer h3 {
-            font-size: 16px; /* Decrease font size for headings */
+            font-size: 16px; 
         }
     
         ul li a {
-            font-size: 12px; /* Decrease font size for links */
+            font-size: 12px; 
         }
     
         .social-icons a {
-            font-size: 20px; /* Decrease font size for social icons */
+            font-size: 20px; 
         }
     }
     
     /* Media Queries for Mobile Phones */
     @media (max-width: 480px) {
         .footer-column {
-            margin: 0 10px; /* Adjust margins for smaller screens */
+            margin: 0 10px; 
         }
     
         .galaxy-footer h3 {
-            font-size: 14px; /* Decrease font size for headings */
+            font-size: 14px; 
         }
     
         ul li a {
-            font-size: 10px; /* Decrease font size for links */
+            font-size: 10px; 
         }
     
         .social-icons a {
-            font-size: 18px; /* Decrease font size for social icons */
+            font-size: 18px;
         }
     }
     @media (max-width: 768px) {
         .maincontainer {
-            margin: 0 20px; /* Adjust margin for smaller screens */
+            margin: 0 20px; 
         }
     
         .center-image img {
-            width: 100%; /* Make images fill the screen width */
+            width: 100%; 
             max-width: none;
         }
     }
@@ -1313,30 +1269,102 @@ iframe {
     /* Media Queries for Mobile Phones */
     @media (max-width: 480px) {
         .maincontainer {
-            margin: 0 10px; /* Adjust margin for smaller screens */
+            margin: 0 10px; 
         }
     
         .maincontainer h1 {
-            font-size: 24px; /* Decrease heading font size */
+            font-size: 24px; 
         }
     
         .center-image img {
-            width: 100%; /* Make images fill the screen width */
+            width: 100%; 
             max-width: none;
         }
     
         .maincontainer p {
-            font-size: 14px; /* Decrease paragraph font size */
+            font-size: 14px;
         }
     
         .maincontainer .changepage {
-            margin-top: 30px; /* Adjust spacing for smaller screens */
+            margin-top: 30px; 
         }
     
         .maincontainer .changepage a {
-            font-size: 16px; /* Decrease font size for page change links */
+            font-size: 16px; 
         }
     }   
+
+/*untuk responsif blog*/
+@media (max-width: 768px) {
+    .top-section {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .right-section {
+        margin-right: 0;
+    }
+
+    .right-image {
+        margin-top: 20px;
+    }
+}
+
+/* Responsif untuk HP */
+@media (max-width: 480px) {
+    .judul h1 {
+        font-size: 24px;
+    }
+
+    .judul h2 {
+        margin-left: 20px;
+    }
+
+    .judul h3 {
+        margin-left: 20px;
+        font-size: 18px;
+    }
+
+    .caption {
+        font-size: 18px;
+    }
+
+    .top-section img,
+    .right-image img,
+    .left-section img {
+        border-radius: 0; /* Menghilangkan border-radius pada gambar di layar kecil */
+    }
+}
+
+/* Responsif untuk Laptop */
+@media (min-width: 1024px) {
+    .top-section {
+        gap: 38px;
+    }
+
+    .right-section {
+        margin-right: 50px;
+    }
+
+    .right-image {
+        margin-top: 0;
+    }
+}
+
+/* Responsif untuk tablet dan laptop */
+@media (min-width: 768px) and (max-width: 1023px) {
+    .judul h2,
+    .judul h3 {
+        margin-left: 20px;
+    }
+}
+
+/* Responsif untuk HP dan tablet */
+@media (max-width: 1023px) {
+    .bottom-section {
+        text-align: center;
+    }
+}
 /*responsive untuk about us*/
 @media (max-width: 480px) {
     .introduction {
@@ -1407,7 +1435,7 @@ iframe {
     }
 
     .banner_container img {
-        width: 90%; /* Adjust image width for mobile phones */
+        width: 70%; /* Adjust image width for mobile phones */
     }
 
     .main-category .content {
@@ -1423,21 +1451,21 @@ iframe {
 /*for tablet*/
 @media (max-width: 768px) {
     .main-tips .text {
-        margin: 20px; /* Adjust margin for smaller screens */
-        padding: 20px; /* Adjust padding for smaller screens */
+        margin: 20px; 
+        padding: 20px; 
     }
 
     .main-tips .text p {
-        font-size: 18px; /* Decrease font size for paragraphs */
+        font-size: 18px; 
     }
 
     .tips img {
         width: 100px; /* Adjust image size for smaller screens */
-        margin-right: 10px; /* Adjust spacing for smaller screens */
+        margin-right: 10px; 
     }
 
     .column {
-        gap: 10px; /* Adjust spacing for smaller screens */
+        gap: 10px; 
     }
 
     .column img {
@@ -1457,29 +1485,29 @@ iframe {
 /* Media Queries for Mobile Phones */
 @media (max-width: 480px) {
     .main-tips {
-        margin: 0 10px; /* Adjust margin for smaller screens */
+        margin: 0 10px; 
     }
 
     .main-tips h3 {
-        font-size: 24px; /* Decrease heading font size */
+        font-size: 24px; 
     }
 
     .main-tips .text {
-        margin: 10px; /* Adjust margin for smaller screens */
-        padding: 10px; /* Adjust padding for smaller screens */
+        margin: 10px; 
+        padding: 10px; 
     }
 
     .main-tips .text p {
-        font-size: 16px; /* Decrease font size for paragraphs */
+        font-size: 16px;
     }
 
     .tips img {
-        width: 80px; /* Adjust image size for smaller screens */
-        margin-right: 10px; /* Adjust spacing for smaller screens */
+        width: 80px; /* menyesuaikan ukuran gambar dilayar kecil */
+        margin-right: 10px; 
     }
 
     .column {
-        gap: 10px; /* Adjust spacing for smaller screens */
+        gap: 10px; /* menambahkan space di layarkecil */
     }
 
     .column img {
@@ -1497,71 +1525,96 @@ iframe {
 }
 
  /*responsive untuk login*/
-    @media (max-width: 768px) {
-        .login {
-            width: 90%;
-            max-width: 320px;
-            margin: 0 auto;
-            padding: 30px;
-        }
-    
-        .login .avatar {
-            width: 60px;
-            height: 60px;
-            top: -10%;
-        }
-    
-        .login h1 {
-            font-size: 20px;
-        }
-    
-        .login p {
-            font-size: 14px;
-        }
-    
-        .login input,
-        .form-input {
-            height: 30px;
-            font-size: 14px;
-        }
-    
-        .login .btn {
-            height: 30px;
-            font-size: 16px;
-        }
+ @media (max-width: 768px) {
+    .login {
+        width: 80%;
+        height: auto;
+        padding: 30px;
     }
-    
-    /* Media Queries for Mobile Phones */
-    @media (max-width: 480px) {
-        .login {
-            width: 90%;
-            max-width: 320px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-    
-        .login .avatar {
-            width: 50px;
-            height: 50px;
-            top: -10%;
-        }
-    
-        .login h1 {
-            font-size: 18px;
-        }
-    
-        .login p {
-            font-size: 12px;
-        }
-    
-        .login input,
-        .form-input {
-            height: 25px;
-            font-size: 12px;
-        }
-    
-        .login .btn {
-            height: 25px;
-            font-size: 14px;
-        }
+
+    .login .avatar {
+        width: 60px;
+        height: 60px;
+        top: -10%;
+        left: calc(50% - 30px);
     }
+
+    .login h1 {
+        font-size: 18px;
+    }
+
+    .login input {
+        margin-bottom: 15px;
+    }
+
+    .form-input {
+        height: 35px;
+    }
+
+    .login .btn {
+        height: 32px;
+        font-size: 16px;
+    }
+
+    .login a {
+        font-size: 11px;
+        line-height: 18px;
+    }
+
+    .register-link {
+        font-size: 12px;
+        margin-top: 15px;
+    }
+
+    .register-link p a {
+        font-size: 13px;
+    }
+}
+
+/* Tambahan untuk tata letak responsif pada perangkat laptop (lebar 992px) */
+@media (min-width: 769px) and (max-width: 992px) {
+    .login {
+        width: 60%;
+        padding: 40px;
+    }
+
+    .login .avatar {
+        width: 70px;
+        height: 70px;
+        top: -15%;
+        left: calc(50% - 35px);
+    }
+
+    .login h1 {
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+
+    .login input {
+        margin-bottom: 25px;
+    }
+
+    .form-input {
+        height: 40px;
+    }
+
+    .login .btn {
+        height: 35px;
+        font-size: 17px;
+    }
+
+    .login a {
+        font-size: 12px;
+        line-height: 20px;
+    }
+
+    .register-link {
+        font-size: 14px;
+        margin-top: 25px;
+    }
+
+    .register-link p a {
+        font-size: 15px;
+    }
+}
+ 
